# ai-catcher-grade-app

./: .env.example  .gitignore  README.md  Untitled.ipynb  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: launch.json
apps/api/: main.py
apps/web/: next.config.ts  package.json
apps/web/scripts/: generate-demo-snapshot.mjs
apps/web/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/web/src/components/: ai-analyst-card.tsx  api-debug-panel.tsx  app-nav.tsx  brand-mark.tsx  catcher-summary-insights.tsx  chart-shell.tsx  compare-count-state-panel.tsx  comparison-table.tsx  count-state-matrix.tsx  data-freshness-panel.tsx  demo-data-badge.tsx  empty-state-panel.tsx  grade-card.tsx  heatmap-grid.tsx  intro-help.tsx  leaderboard-chart.tsx  live-dashboard.tsx  live-game-panel.tsx  live-zone-grid.tsx  metric-card.tsx  pairing-dva-chart.tsx  pairing-intel-table.tsx  pitch-mix-chart.tsx  pitch-type-dva-chart.tsx  pitch-type-performance-board.tsx  product-status-strip.tsx  recommendation-option-board.tsx  recommendation-rv-chart.tsx  report-builder.tsx  sample-stability-badge.tsx  section-card.tsx  steal-against-panel.tsx  trend-chart.tsx  (+2 more)
notebooks/: exploration.ipynb
services/ingestion/: fetch_statcast.py  ingest_statcast.py  load_chadwick_identity.py
services/modeling/: features.py  load_features.py  rebuild_catcher_summaries.py  refresh_catcher_metrics.py  refresh_latest_scored_data.py  refresh_player_metadata.py  score_dva.py  seed_demo.py  train_model.py  validate_compare_mode.py  validate_dashboard_metrics.py
sql/: schema.sql  schema.sql.save
(+22 files in other folders)
