[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catcher-intel"
version = "0.1.0"
description = "MVP for ranking MLB catchers by contextual pitch decision quality."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116,<1.0",
  "joblib>=1.4,<2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pybaseball>=2.2,<3.0",
  "pydantic>=2.9,<3.0",
  "requests>=2.32,<3.0",
  "scikit-learn>=1.6,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.35,<1.0",
  "xgboost>=2.1,<3.0"
]

[tool.setuptools]
package-dir = {"" = "packages/python/catcher_intel/src"}

[tool.setuptools.packages.find]
where = ["packages/python/catcher_intel/src"]

[tool.ruff]
line-length = 100
target-version = "py39"
